# CPU-Ray-Tracer

./: .clang-format  CMakeLists.txt  CPURayTracer.hpp  LICENSE  README.md
src/: AABBox.hpp  BRDF.hpp  BuildFunctions.hpp  Camera.cpp  Camera.hpp  Constants.hpp  GeometricObject.hpp  Instance.cpp  Instance.hpp  Light.hpp  Material.hpp  Mesh.hpp  Random.cpp  Random.hpp  Ray.hpp  RenderBuffer.hpp  Sampler.cpp  Sampler.hpp  ShadeRec.hpp  Tracer.hpp  Types_rt.hpp  ViewPlane.hpp  World.cpp  World.hpp  math_RT.cpp  math_RT.hpp
src/brdf/: GlossySpecular.cpp  GlossySpecular.hpp  Lambertian.cpp  Lambertian.hpp
src/cameras/: AnaglyphCamera.cpp  AnaglyphCamera.hpp  FishEyeCamera.cpp  FishEyeCamera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PinholeCamera.cpp  PinholeCamera.hpp  SphericalPanoramicCamera.cpp  SphericalPanoramicCamera.hpp  StereoCamera.cpp  StereoCamera.hpp  StereoDualCamera.cpp  StereoDualCamera.hpp  ThinLensCamera.cpp  ThinLensCamera.hpp
src/geometric_objects/: Box.cpp  Box.hpp  Cone.cpp  Cone.hpp  Container.cpp  Container.hpp  Disk.cpp  Disk.hpp  GenericCylinder.cpp  GenericCylinder.hpp  GeometricObjects.hpp  Plane.cpp  Plane.hpp  Rect.cpp  Rect.hpp  SmoothTriangle.cpp  SmoothTriangle.hpp  Sphere.cpp  Sphere.hpp  Torus.cpp  Torus.hpp  Triangle.cpp  Triangle.hpp
src/lights/: AmbientLight.hpp  AmbientOccluder.cpp  AmbientOccluder.hpp  AreaLight.cpp  AreaLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  EnvironmentLight.cpp  EnvironmentLight.hpp  JitteredDirectionalLight.cpp  JitteredDirectionalLight.hpp  JitteredPointLight.cpp  Lights.hpp  (+3 more)
(+50 files in other folders)
